# matchschema

./: .gitignore  CNAME  LICENSE  README.md  index.html  serve.sh  sw.js
.github/workflows/: update-schedule.yml
assets/: app.js  manifest.json  styles.css
data/: calendar.ics  games.json  games.tsv
docs/: Central-F10-schedule.pen
generator/: README.md  app.py  config.toml  pyproject.toml
generator/src/: data_importer.py  ics_config.py  models.py  paths.py
generator/src/central_f10/: __init__.py  config.py  data_importer.py  models.py  paths.py  validation.py
generator/tests/: __init__.py  conftest.py  test_app.py  test_data_importer.py  test_ics_config.py  test_integration.py  test_models.py  test_pipeline.py  test_validation.py
